--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -50,11 +50,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sumup/jobs/4367385002'>Job Application for Business Intelligence Analyst at SumUp</a></h5> 
+<h5><a href='https://boards.greenhouse.io/sumup/jobs/4367385002'>Job Application for Business Intelligence Analyst at SumUp</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/homex/f618f028-fcd0-433f-8efe-e75d1d6e6429'>HomeX - Business Intelligence Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/homex/f618f028-fcd0-433f-8efe-e75d1d6e6429'>HomeX - Business Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -92,7 +92,7 @@ analyzing and reporting operational and business data from multiple sources.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cbinsights/jobs/1786391'>Job Application for Business Intelligence Lead at CB Insights</a></h5> 
+<h5><a href='https://boards.greenhouse.io/cbinsights/jobs/1786391'>Job Application for Business Intelligence Lead at CB Insights</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -141,7 +141,7 @@ Technologies Inc.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-prg.icims.com/jobs/1597/senior-business-intelligence-engineer/job'>Senior Business Intelligence Engineer in Armonk, New York ...</a></h5> 
+<h5><a href='https://careers-prg.icims.com/jobs/1597/senior-business-intelligence-engineer/job'>Senior Business Intelligence Engineer in Armonk, New York ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>22 hours ago ... Primary responsibilities of the Data Analyst include: Build, maintain, and own 
 scalable data pipelines to support various data integrations; Propose, build, and
@@ -178,7 +178,7 @@ developing and implementing metrics and reporting to improve our business and
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BrainspireSolutions/743999686600280-manager-director-of-business-intelligence'>Brainspire Solutions Manager/Director of Business Intelligence | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BrainspireSolutions/743999686600280-manager-director-of-business-intelligence'>Brainspire Solutions Manager/Director of Business Intelligence | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -194,7 +194,7 @@ developing and implementing metrics and reporting to improve our business and
 <p><span class="badge badge-light">Seattle Seattle San Francisco New York London Mumbai</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/logix/jobs/1782486'>Job Application for Business Intelligence Developer at Logix Federal Credit Union</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/logix/jobs/1782486'>Job Application for Business Intelligence Developer at Logix Federal Credit Union</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -246,7 +246,7 @@ in Herten (published: 12.07.2019). Apply now or check the other available jobs.<
 strategic decisions that drive growth. The Business Intelligence team at 
 Mavenlink?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/scp-health/job/om89afwx'>SCP Health Careers - Business Intelligence Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/scp-health/job/om89afwx'>SCP Health Careers - Business Intelligence Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -258,7 +258,7 @@ Mavenlink?...</p>
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Proprioo/743999692018235-business-intelligence-analyst-h-f-'>Proprioo Business intelligence analyst (H/F) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Proprioo/743999692018235-business-intelligence-analyst-h-f-'>Proprioo Business intelligence analyst (H/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -331,7 +331,7 @@ reporting infrastructure and visualisation to the next level. BI touches every p
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/imperva/job/oX4oafwj'>Imperva Careers - Business Intelligence Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/imperva/job/oX4oafwj'>Imperva Careers - Business Intelligence Engineer</a></h5> 
 <p><span class="badge badge-light">Redwood City California</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
