--- a/project-manager.html
+++ b/project-manager.html
@@ -40,6 +40,18 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://shijigroup.join.com/jobs/251716-product-program-manager-m-f'>Job @ Shiji (Berlin): Product Program Manager (m/f) | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Octopus1/743999692290599-project-manager'>Octopus Project Manager | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Octopus1/743999692108021-it-operations-project-manager'>Octopus IT Operations Project Manager | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
 <h5><a href='http://wpromotecareers.applytojob.com/apply/TmG3BZPFsg/Project-Manager'>Project Manager - Wpromote - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
@@ -92,7 +104,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/premisehealth/job/oh5pafwF'>Premise Health Careers - Senior Project Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/premisehealth/job/oh5pafwF'>Premise Health Careers - Senior Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -192,6 +204,17 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
+<h5><a href='https://kimmel-associates.breezy.hr/p/c16737d5b146-assistant-project-manager'>Assistant Project Manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>6 days ago ... A large commercial construction General Contractor is seeking to hire an 
+Assistant Project Manager for the Houston, Texas, market. The company 
+specializes in?...</p>
+<hr/>
+<h5><a href='https://kimmel-associates.breezy.hr/p/ede649480d42-project-manager?source=GoogleJobs'>Project Manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>6 days ago ... About the Company: A roofing and building envelope subcontractor specializing 
+in roofing, waterproofing & restoration with a project portfolio consisting of?...</p>
+<hr/>
 <h5><a href='https://atheneum.recruitee.com/o/program-manager'>
       Program Manager - Atheneum Partners
     </a></h5> 
@@ -243,7 +266,7 @@ of data types including speech, text, image and video. With deep expertise in?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999692235782-senior-it-project-manager-m-w-d-'>Publicis Groupe Senior IT Project Manager (m/w/d) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999692235782-senior-it-project-manager-m-w-d-'>Publicis Groupe Senior IT Project Manager (m/w/d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -261,7 +284,7 @@ of data types including speech, text, image and video. With deep expertise in?..
 <p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://itech.applytojob.com/apply/Rsn3Gz/Digital-Project-Manager'>Digital Project Manager - iTech Media - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://itech.applytojob.com/apply/Rsn3Gz/Digital-Project-Manager'>Digital Project Manager - iTech Media - Career Page</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -280,7 +303,7 @@ new program management office to support the NIH. On our team, you'll monitor?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wayfair/jobs/4365552002'>Job Application for Senior Project Manager - Industrial Engineering at Wayfair</a></h5> 
+<h5><a href='https://boards.greenhouse.io/wayfair/jobs/4365552002'>Job Application for Senior Project Manager - Industrial Engineering at Wayfair</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -292,11 +315,11 @@ new program management office to support the NIH. On our team, you'll monitor?..
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/welocalize/89281f7c-fec6-4cc4-bf30-6ad7c19ee616'>Welocalize - Localization Project Manager - Life Sciences - PDX</a></h5> 
+<h5><a href='https://jobs.lever.co/welocalize/89281f7c-fec6-4cc4-bf30-6ad7c19ee616'>Welocalize - Localization Project Manager - Life Sciences - PDX</a></h5> 
 <p><span class="badge badge-light">Portland, Oregon</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/welocalize/9f98440a-7826-4978-b412-decc623485f1'>Welocalize - Program Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/welocalize/9f98440a-7826-4978-b412-decc623485f1'>Welocalize - Program Manager</a></h5> 
 <p><span class="badge badge-light">Tokyo, Japan</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -405,7 +428,7 @@ in?...</p>
 <p><span class="badge badge-light">Albany, NY</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/csenergy/4a362a90-36ec-49fc-8ebe-3a11cc7f71e1'>CS Energy - Assistant Project Manager - MA</a></h5> 
+<h5><a href='https://jobs.lever.co/csenergy/4a362a90-36ec-49fc-8ebe-3a11cc7f71e1'>CS Energy - Assistant Project Manager - MA</a></h5> 
 <p><span class="badge badge-light">Worcester</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -468,7 +491,7 @@ in?...</p>
 <p>Jul 15, 2019 ... Project Manager. Job description. At SkinVision, we are on a mission to save the 
 lives of 250,000 people in the next ten years by revolutionizing the way we care?...</p>
 <hr/>
-<h5><a href='https://codetribe.recruitee.com/o/it-project-manager-novi-sad'>IT Project Manager - Codetribe</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://codetribe.recruitee.com/o/it-project-manager-novi-sad'>IT Project Manager - Codetribe</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... IT Project Manager. Novi Sad, Serbia. About the role: Your main focus is to keep 
 your projects on track. This means you are able to juggle with planning, timing,?...</p>
@@ -480,28 +503,6 @@ motivated, and forward-thinking? At Codetribe you'll have the opportunity to?...
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/SiaPartners/743999692213453-project-manager-consultant'>Sia Partners Project Manager Consultant | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Bellevue, WA</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SiaPartners/743999692213735-project-manager-manager-level'>Sia Partners Project Manager - Manager Level | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Bellevue, WA</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SiaPartners/743999692213704-project-manager-senior-consultant'>Sia Partners Project Manager Senior Consultant | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Bellevue, WA</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/IKEASoutheastAsia/743999692215043-project-manager-ikea-southeast-asia-2-years-contract-'>IKEA Southeast Asia Project Manager, IKEA Southeast Asia (2 Years Contract) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Singapore Singapore Malaysia</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ComputerConsultantsInternational1/743999692214919-pmo-sr-it-project-manager-expert-job-id-602057-'>Computer Consultants International, Inc. PMO Sr. IT Project Manager - Expert (Job ID: 602057) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://verisys.recruiterbox.com/jobs/fk03f4p/'>
-    Project Manager at Verisys
-</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
 
